<resources>

    <string name="app_name">ConCon</string>

    <!--==========Error Message==========-->
    <string name="error_server">서버 통신에 실패했습니다.</string>
    <string name="error_sign_up">회원가입에 실패했습니다.</string>
    <string name="error_sign_in">로그인에 실패했습니다.</string>
    <string name="error_info">정보를 입력해주세요,</string>
    <string name="error_id">아이디를 입력해주세요.</string>
    <string name="error_pw">비밀번호를 입력해주세요.</string>
    <string name="error_retry">다시 시도해주세요.</string>

    <!--==========Intro==========-->
    <string name="start">시작하기</string>
    <string name="intro_1">환영합니다!</string>
    <string name="intro_2">당신의 대회중계 플랫폼,</string>

    <!--==========Sign In/Up==========-->
    <string name="sign_in">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="duplicate_check">중복체크</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="phone_number">휴대폰 번호</string>
    <string name="nickname">닉네임</string>

    <!--==========Contest==========-->
    <string name="content">내용</string>
    <string name="title">제목</string>
    <string name="chose_contest_date">대회 날짜 선택</string>
    <string name="create_contest">대회 등록하기</string>
    <string name="join_contest">대회 참가하기</string>
    <string name="price">상금을 입력하세요.</string>

    <!--=====Etc=====-->
    <string name="date_format">%1$s ~ %2$s</string>
    <string name="server_success">success</string>
    <string name="server_fail">fail</string>
    <string name="confirm">확인</string>

    <string name="charge">충전하기</string>
    <string name="contest_date">대회 날짜</string>

</resources>