<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.project.concon.viewmodel.IntroViewModel" />
    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.fragment.IntroFragment">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up_intro"
                style="@style/Button.MainColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_24dp"
                android:layout_marginBottom="@dimen/space_32dp"
                android:onClick="@{() -> vm.signUpEvent()}"
                android:text="@string/sign_up"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_in_intro"
                style="@style/Button.WhiteColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_24dp"
                android:layout_marginBottom="@dimen/space_16dp"
                android:onClick="@{() -> vm.signInEvent()}"
                android:text="@string/sign_in"
                app:layout_constraintBottom_toTopOf="@+id/btn_sign_up_intro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_1"
                android:layout_marginBottom="@dimen/space_8dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_24dp"
                android:textSize="@dimen/text_size_20sp"
                android:text="@string/app_name"
                setShader="@{true}"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/textView11"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView6"
                style="@style/Base.Widget.AppCompat.TextView.Big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_20sp"
                android:gravity="center"
                android:text="@string/intro_2"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/textView12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_16dp"
                android:text="@string/start"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/btn_sign_in_intro"
                app:layout_constraintEnd_toEndOf="@+id/btn_sign_in_intro"
                app:layout_constraintStart_toStartOf="@+id/btn_sign_in_intro" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="@dimen/image_0dp"
                android:layout_height="@dimen/image_0dp"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                app:srcCompat="@drawable/img_intro_winner" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_10dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="@+id/imageView5" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="@dimen/image_20dp"
                android:layout_height="@dimen/image_20dp"
                android:layout_marginStart="@dimen/space_16dp"
                android:layout_marginTop="@dimen/space_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_logo" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>