<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/sign_up_fragment_scene"
        tools:context=".fragment.SignUpFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/fab_close_sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_close_sign_up"
                style="@style/Widget.MaterialComponents.FloatingActionButton.Main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"

                android:src="@drawable/ic_close"
                app:layout_constraintBottom_toTopOf="@+id/et_layout_id_sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.69"
                tools:ignore="SpeakableTextPresentCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_layout_id_sign_up"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.BaseInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                android:focusable="true"
                app:layout_constraintBottom_toTopOf="@+id/et_layout_password_sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_id_sign_up"
                    style="@style/Widget.AppCompat.EditText.BaseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/id"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_layout_nickname_sign_up"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.BaseInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nickname_sign_up"
                    style="@style/Widget.AppCompat.EditText.BaseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nickname"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_layout_phone_number_sign_up"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.BaseInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                app:layout_constraintBottom_toTopOf="@+id/et_layout_nickname_sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone_number_sign_up"
                    style="@style/Widget.AppCompat.EditText.BaseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_layout_password_sign_up"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.BaseInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                app:layout_constraintBottom_toTopOf="@+id/et_layout_phone_number_sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password_sign_up"
                    style="@style/Widget.AppCompat.EditText.BaseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                style="@style/Widget.AppCompat.Button.Main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                android:layout_marginBottom="@dimen/sign_btn_margin_bottom"
                android:text="@string/sign_up"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>