<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.project.concon.viewmodel.CreateContestViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".view.fragment.CreateContestFragment">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm_create_contest"
            style="@style/Widget.AppCompat.Button.Main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/layout_margin"
            android:layout_marginBottom="50dp"
            android:enabled="true"
            android:text="@string/create_contest"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_close_create_contest"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/BaseTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_date_create_contest"
                        style="@style/Widget.AppCompat.EditText.BaseEditText"
                        android:focusableInTouchMode="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{vm.date}"
                        android:hint="@string/chose_contest_date"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/BaseTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_prize_create_contest"
                        style="@style/Widget.AppCompat.EditText.BaseEditText"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="우승 상금 등록하기"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp"
                    android:background="@color/light_grey" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/BaseTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_title_create_contest"
                        style="@style/Widget.AppCompat.EditText.BaseEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"
                        tools:ignore="TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/BaseTextInputLayout"
                    android:layout_width="match_parent"
                    app:hintEnabled="false"
                    android:layout_height="400dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_content_create_contest"
                        style="@style/Widget.AppCompat.EditText.ContentEditText"
                        android:gravity="top"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/content" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_add_photo_create_contest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginVertical="16dp"
                    android:text="사진 첨부하기" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_photo_create_contest"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    tools:listitem="@layout/rv_item_join_contest_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="150dp" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <ImageButton
            android:id="@+id/btn_close_create_contest"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>